[package]
name = "rabbit-monitor-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["full"] }
colored = "2.1.0"
